--- a/index.html
+++ b/index.html
@@ -5,21 +5,55 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Nicolas S. Montanaro</title>
+<title>index</title>
 
 
 <style type="text/css">
+@font-face {
+	font-family: 'latoregular';
+	src: url('font/lato-regular-webfont.woff2') format('woff2'),
+		url('font/lato-regular-webfont.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'latobold';
+	src: url('font/lato-bold-webfont.woff2') format('woff2'),
+		url('font/lato-bold-webfont.woff') format('woff');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'latoitalic';
+	src: url('font/lato-italic-webfont.woff2') format('woff2'),
+		url('font/lato-italic-webfont.woff') format('woff');
+	font-weight: italic;
+	font-style: normal;
+}
+
 body {
+	font-family: "latoregular";
 	margin: 40px auto;
 	max-width: 960px;
 	line-height: 1.6;
-	font-size: 16px;
+	font-size: 18px;
 	color: #444;
 	padding: 0 10px;
 }
 
 h1, h2, h3 {
+	font-family: "latobold";
 	line-height: 1.2;
+}
+
+strong {
+	font-family: "latobold";
+}
+
+em {
+	font-family: "latoitalic";
 }
 </style>
 
@@ -28,13 +62,13 @@ h1, h2, h3 {
 
 <body>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/nobeard_bw.png" width="100px" height="100px" />
 </div>
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
-<p><em>Aspiring software craftsman</em></p>
+<p><em>Software craftsman</em></p>
 
 <hr>
 
@@ -63,7 +97,7 @@ h1, h2, h3 {
 
 <h2 id="toc_3">Work history</h2>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/hr.png" height="75px" />
 </div>
 
@@ -77,7 +111,7 @@ h1, h2, h3 {
 <li>Primary developer of all HomeReport applications including OpenHouse and HomeInspection.</li>
 </ul>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/msw.png" height="75px" />
 </div>
 
@@ -91,7 +125,7 @@ h1, h2, h3 {
 <li>Was a member of a small team developing the application for use with Facebook, LinkedIn, and Twitter integration. The stack included Meteor, HTML, CSS3, JavaScript, and MongoDB.</li>
 </ul>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/intel.png" height="75px" />
 </div>
 
@@ -106,7 +140,7 @@ h1, h2, h3 {
 <li>Identified and resolved proprietary software issues which resulted in the on-time delivery of a performance monitoring tool to Intel labs.</li>
 </ul>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/rit.gif" height="75px" />
 </div>
 
@@ -120,7 +154,7 @@ h1, h2, h3 {
 <li>Tutored individual students in introductory Computer Science courses on a biweekly basis.</li>
 </ul>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/rit.gif" height="75px" />
 </div>
 
@@ -186,7 +220,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 
 <h2 id="toc_14">Activities</h2>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/viking.png"  height="50px" />
 </div>
 
@@ -199,7 +233,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Focused on Ruby + Rails, included JS, Angular, Sinatra, HTML5/CSS3, Sass, and numerous other DSLs, frameworks, and tools.</li>
 </ul>
 
-<div style="float:right; margin-left: 10px">
+<div style="float:right">
   <img src="images/pkp.png"  height="100px" />
 </div>
 
