--- a/index.html
+++ b/index.html
@@ -10,31 +10,28 @@
 
 <style type="text/css">
 @font-face {
-	font-family: 'latoregular';
-	src: url('font/lato-regular-webfont.woff2') format('woff2'),
-		url('font/lato-regular-webfont.woff') format('woff');
+	font-family: 'FaktProSoft';
+	src: url('font/FaktSoftPro-Normal.woff');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'latobold';
-	src: url('font/lato-bold-webfont.woff2') format('woff2'),
-		url('font/lato-bold-webfont.woff') format('woff');
+	font-family: 'FaktProSoft';
+	src: url('font/FaktSoftPro-Medium.woff');
 	font-weight: bold;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'latoitalic';
-	src: url('font/lato-italic-webfont.woff2') format('woff2'),
-		url('font/lato-italic-webfont.woff') format('woff');
+	font-family: 'FaktProSoft';
+	src: url('font/FaktSoftPro-Blond.woff');
 	font-weight: italic;
 	font-style: normal;
 }
 
 body {
-	font-family: "latoregular";
+	font-family: "FaktProSoft";
 	margin: 40px auto;
 	max-width: 960px;
 	line-height: 1.6;
@@ -44,16 +41,12 @@ body {
 }
 
 h1, h2, h3 {
-	font-family: "latobold";
+	font-family: "FaktProSoft";
 	line-height: 1.2;
 }
 
-strong {
-	font-family: "latobold";
-}
-
-em {
-	font-family: "latoitalic";
+strong, em {
+	font-family: "FaktProSoft";
 }
 </style>
 
