--- a/index.html
+++ b/index.html
@@ -32,20 +32,46 @@
 
 body {
 	font-family: "FaktProSoft";
-	margin: 40px auto;
-	max-width: 960px;
-	line-height: 1.6;
+	margin: 0 auto;
+	max-width: 50em;
+	line-height: 1.5;
 	font-size: 18px;
-	color: #444;
-	padding: 0 10px;
+	color: #566b78;
+	padding: 0 1em;
 }
 
-h1, h2, h3 {
+h1 {
 	font-family: "FaktProSoft";
-	line-height: 1.2;
+	color: #333;
+	margin-bottom: 0.22em;
 }
 
-strong, em {
+h2 {
+	font-family: "FaktProSoft";
+	color: #333;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+}
+
+h3 {
+	font-family: "FaktProSoft";
+	color: #333;
+	margin-top: 0.5em;
+	padding-top: 0.5em;
+	margin-bottom: -0.7em;
+}
+	
+
+a {
+	color: #0077b5;
+}
+
+strong {
+	font-family: "FaktProSoft";
+	color: #33
+}
+
+em {
 	font-family: "FaktProSoft";
 }
 </style>
@@ -61,7 +87,7 @@ strong, em {
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
-<p><em>Software craftsman</em></p>
+<em>Software craftsman</em>
 
 <hr>
 
