--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>index</title>
+<title>Nicolas S. Montanaro</title>
 
 
 <style type="text/css">
@@ -36,26 +36,30 @@ body {
 	max-width: 50em;
 	line-height: 1.5;
 	font-size: 18px;
-	color: #566b78;
+	/* color: #566b78; */
+	color: #8492A6;
 	padding: 0 1em;
 }
 
 h1 {
 	font-family: "FaktProSoft";
-	color: #333;
+	/* color: #333; */
+	color: #3C4858;
 	margin-bottom: 0.22em;
 }
 
 h2 {
 	font-family: "FaktProSoft";
-	color: #333;
+	/* color: #333; */
+	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
 }
 
 h3 {
 	font-family: "FaktProSoft";
-	color: #333;
+	/* color: #333; */
+	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
 	margin-bottom: -0.7em;
@@ -63,12 +67,14 @@ h3 {
 	
 
 a {
-	color: #0077b5;
+	/* color: #0077b5; */
+	color: #009EEB;
 }
 
 strong {
 	font-family: "FaktProSoft";
-	color: #33
+	/* color: #333; */
+	color: #3C4858;
 }
 
 em {
