--- a/index.html
+++ b/index.html
@@ -35,22 +35,19 @@ body {
 	margin: 0 auto;
 	max-width: 50em;
 	line-height: 1.5;
-	font-size: 18px;
-	/* color: #566b78; */
+	font-size: 1rem;
 	color: #8492A6;
 	padding: 0 1em;
 }
 
 h1 {
 	font-family: "FaktProSoft";
-	/* color: #333; */
 	color: #3C4858;
 	margin-bottom: 0.22em;
 }
 
 h2 {
 	font-family: "FaktProSoft";
-	/* color: #333; */
 	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
@@ -58,7 +55,6 @@ h2 {
 
 h3 {
 	font-family: "FaktProSoft";
-	/* color: #333; */
 	color: #3C4858;
 	margin-top: 0.5em;
 	padding-top: 0.5em;
@@ -67,13 +63,11 @@ h3 {
 	
 
 a {
-	/* color: #0077b5; */
 	color: #009EEB;
 }
 
 strong {
 	font-family: "FaktProSoft";
-	/* color: #333; */
 	color: #3C4858;
 }
 
