--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body {
 h1 {
 	font-family: "FaktProSoft";
 	color: #3C4858;
-	margin-bottom: 0.22em;
+	margin-bottom: 0.6em;
 }
 
 h2 {
@@ -93,11 +93,13 @@ em {
 
 <h2 id="toc_1">About</h2>
 
-<p>Recently completed a B.S. in computer science at the Rochester Institute of Technology. Starting off a freshman studying finance, I found I much preferred spending my time trying to understand Super Nintendo game programming than stock numbers.</p>
+<p>Starting off a freshman in college studying finance, I found I much preferred spending my time trying to understand Super Nintendo assembly programming rather than stock numbers.</p>
 
-<p>After a year and a half of formal instruction in computer science I began working at Intel in California. While there I attended Viking Code School to up my programming abilities, and completed a couple of side projects.</p>
+<p>After a year and a half of formal instruction in computer science I began working at Intel in California. While there I attended Viking Code School to further develop my programming abilities, and completed a couple of side projects.</p>
 
 <p>During the summer of 2016 I worked remotely on <a href="https://myspiderweb.com">mySpiderweb</a> with a team of two other developers and the founder. The small team led to a fantastic work experience and I&#39;m proud to have had my hands in all aspects of the application.</p>
+
+<p>I completed a B.S. in Computer Science from the Rochester Institute of Technology in May of 2017.</p>
 
 <p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
 
