--- a/index.html
+++ b/index.html
@@ -7,75 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 <title>Nicolas S. Montanaro</title>
 
-
-<style type="text/css">
-@font-face {
-	font-family: 'FaktProSoft';
-	src: url('font/FaktSoftPro-Normal.woff');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'FaktProSoft';
-	src: url('font/FaktSoftPro-Medium.woff');
-	font-weight: bold;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'FaktProSoft';
-	src: url('font/FaktSoftPro-Blond.woff');
-	font-weight: italic;
-	font-style: normal;
-}
-
-body {
-	font-family: "FaktProSoft";
-	margin: 0 auto;
-	max-width: 50em;
-	line-height: 1.5;
-	font-size: 1rem;
-	color: #8492A6;
-	padding: 0 1em;
-}
-
-h1 {
-	font-family: "FaktProSoft";
-	color: #3C4858;
-	margin-bottom: 0.6em;
-}
-
-h2 {
-	font-family: "FaktProSoft";
-	color: #3C4858;
-	margin-top: 0.5em;
-	padding-top: 0.5em;
-}
-
-h3 {
-	font-family: "FaktProSoft";
-	color: #3C4858;
-	margin-top: 0.5em;
-	padding-top: 0.5em;
-	margin-bottom: -0.7em;
-}
-	
-
-a {
-	color: #009EEB;
-}
-
-strong {
-	font-family: "FaktProSoft";
-	color: #3C4858;
-}
-
-em {
-	font-family: "FaktProSoft";
-}
-</style>
-
+<link rel="stylesheet" type="text/css" href="css/sane.css">
 
 </head>
 
@@ -87,7 +19,7 @@ em {
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
-<em>Software craftsman</em>
+<em class="subtitle">Software craftsman</em>
 
 <hr>
 
