--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 
 <body>
 
-<div style="float:right">
-  <img src="images/nobeard_bw.png" width="100px" height="100px" />
-</div>
+<img style="float: right; border-radius: 50%;" src="images/nobeard_bw.png" width="75px" height="75px" />
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
-<em class="subtitle">Software craftsman</em>
+<div id="subtitle">
+  <p class="alignleft"><em>Software craftsman</em></p>
+  <p class="alignright"><a href="/blog">Blog</a></p>
+</div>
 
 <hr>
 
