--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <img src="images/rit.gif" height="75px" />
 </div>
 
-<h3 id="toc_7">Computer science lab student lab instructor</h3>
+<h3 id="toc_7">Computer science student lab instructor</h3>
 
 <p>Rochester Institute of Technology<br>
 <em>August 2014 - January 2015</em></p>
