--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <h2 id="toc_9">Projects</h2>
 
-<h3 id="toc_10">Indepedent study in code clone detection techniques</h3>
+<h3 id="toc_10">Independent study in code clone detection techniques</h3>
 
 <p><strong>Technologies uses</strong>: Java<br>
 View the white paper <a href="/indstudy.pdf">here</a>.</p>
