--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/rit.gif" height="75px" />
+  <img src="images/rit.png" height="75px" />
 </div>
 
 <h3 id="toc_7">Computer science student lab instructor</h3>
@@ -109,7 +109,7 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/rit.gif" height="75px" />
+  <img src="images/rit.png" height="75px" />
 </div>
 
 <h3 id="toc_8">Computer science ambassador</h3>
