--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <title>Nicolas S. Montanaro</title>
 
 <link rel="stylesheet" type="text/css" href="css/sane.css">
+<link rel="stylesheet" type="text/css" href="css/snow.css">
 
 </head>
 
 <body>
 
-<img style="float: right; border-radius: 50%;" src="images/nobeard_bw.png" width="75px" height="75px" />
+<img style="float: right; border-radius: 50%;" src="images/nobeard_bw_xmas.png" width="75px" height="75px" />
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
@@ -201,7 +202,68 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 </ul>
 
 
-
+<div id="snow">
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+		<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+	<i>
+		<b></b>
+	</i>
+</div>
 
 </body>
 
