--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
 <p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
 
+<p>I will be attending the <a href="http://homereport.io">Recurse Center</a> from February to May of 2018. I will be focusing on lower-level programming. Specifically, creating an emulator for the Gameboy in Go and homebrew applications in C and Z80 assembly.</p>
+
 <hr>
 
 <h2 id="toc_2">Contact information</h2>
@@ -174,6 +176,23 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <hr>
 
 <h2 id="toc_14">Activities</h2>
+
+<div style="float:right">
+  <img src="images/rc.png"  height="100px" />
+</div>
+
+<h3 id="toc_15">Programmer at the <a href="https://www.recurse.com">Recurse Center</a></h3>
+
+<p><em>February 2018 - May 2018</em></p>
+
+<p>From the website:</p>
+<blockquote>
+	<p><em>The Recurse Center runs educational programming retreats in New York City. The retreats are free, self-directed, project based, and for anyone who wants to get dramatically better at programming.</em></p>
+</blockquote>
+
+<ul>
+<li>Focusing on programming a Gameboy emulator, toolchain, and homebrew in C, Go, and Z80 assembly.</li>
+</ul>
 
 <div style="float:right">
   <img src="images/viking.png"  height="50px" />
