email update, resume pdf update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <ul>
 <li><p><strong>Professional/recruiter inquiries</strong>: hello [at] nicolas.moe</p></li>
-<li><p><strong>Personal</strong>: nsmon [at] protonmail.ch</p></li>
+<li><p><strong>Personal</strong>: nsmon [at] rbox.co</p></li>
 <li><p><strong>Keybase</strong>: <a href="https://keybase.io/nsm">keybase.io/nsm</a></p></li>
 <li><p><strong>PGP key</strong>: <a href="/pubkey.txt">pubkey.txt</a></p></li>
 </ul>
