--- a/index.html
+++ b/index.html
@@ -52,30 +52,57 @@
 
 <hr>
 
-<h2 id="toc_3">Work history</h2>
+<h2 id="toc_3">Experience</h2>
+
+<div style="float:right">
+  <img src="images/rc.png"  height="100px" />
+</div>
+
+<h3 id="toc_15"><a href="https://www.recurse.com">Recurse Center</a>, Programmer</h3>
+
+<p>
+	New York City, NY
+	<br />
+	<em>February 2018 - May 2018</em>
+</p>
+
+<p>From the website:</p>
+<blockquote>
+	<p><em>The Recurse Center runs educational programming retreats in New York City. The retreats are free, self-directed, project based, and for anyone who wants to get dramatically better at programming.</em></p>
+</blockquote>
+
+<ul>
+<li>Focusing on programming a Gameboy emulator, toolchain, and homebrew in C, Go, and Z80 assembly.</li>
+</ul>
 
 <div style="float:right">
   <img src="images/hr.png" height="75px" />
 </div>
 
-<h3 id="toc_4">Full stack developer</h3>
+<h3 id="toc_4">HomeReport, Full Stack Developer</h3>
 
-<p>HomeReport, Wilton, CT<br>
-<em>May 2017 - present</em></p>
+<p>
+	Wilton, CT
+	<br />
+	<em>May 2017 - present</em>
+</p>
 
 <ul>
 <li>HomeReport offers a suite of applications to make buying, selling, and maintaining homes easier.</li>
-<li>Primary developer of all HomeReport applications including OpenHouse and HomeInspection.</li>
+<li>Primary developer of all HomeReport applications including OpenHouse, HomeInspection, and Foyer.</li>
 </ul>
 
 <div style="float:right">
   <img src="images/msw.png" height="75px" />
 </div>
 
-<h3 id="toc_5">Full stack developer</h3>
+<h3 id="toc_5">mySpiderweb, Full Stack Developer</h3>
 
-<p>mySpiderweb, Rochester, NY (remote)<br>
-<em>May 2016 - September 2016</em></p>
+<p>
+	Rochester, NY (remote)
+	<br />
+	<em>May 2016 - September 2016</em>
+</p>
 
 <ul>
 <li>mySpiderweb is a social media publishing tool that streamlines a multi-network presence for small businesses.</li>
@@ -86,10 +113,13 @@
   <img src="images/intel.png" height="75px" />
 </div>
 
-<h3 id="toc_6">Software application engineer</h3>
+<h3 id="toc_6">Intel, Software Application Engineer</h3>
 
-<p>Intel, Santa Clara, CA<br>
-<em>January 2015 - 2016</em></p>
+<p>
+	Santa Clara, CA
+	<br />
+	<em>January 2015 - December 2015</em>
+</p>
 
 <ul>
 <li>Analyzed the performance of 3D camera hardware &amp; software on Intel architecture prior to release.</li>
@@ -98,13 +128,33 @@
 </ul>
 
 <div style="float:right">
+  <img src="images/viking.png"  height="50px" />
+</div>
+
+<h3 id="toc_15"><a href="https://www.vikingcodeschool.com">Viking Code School</a>, Student</h3>
+
+<p>
+	San Francisco, CA (remote)
+	<br />
+	<em>February 2015 - August 2015</em>
+</p>
+
+<ul>
+<li>Completed an intensive 16 week full-stack development boot camp.</li>
+<li>Focused on Ruby + Rails, included JS, Angular, Sinatra, HTML5/CSS3, Sass, and numerous other DSLs, frameworks, and tools.</li>
+</ul>
+
+<div style="float:right">
   <img src="images/rit.png" height="75px" />
 </div>
 
-<h3 id="toc_7">Computer science student lab instructor</h3>
+<h3 id="toc_7">RIT, Computer Science Student Lab Instructor</h3>
 
-<p>Rochester Institute of Technology<br>
-<em>August 2014 - January 2015</em></p>
+<p>
+	Rochester Institute of Technology
+	<br />
+	<em>August 2014 - January 2015</em>
+</p>
 
 <ul>
 <li>Assisted faculty in the delivery and grading of weekly, programming-based laboratories for an introductory Computer Science course.</li>
@@ -115,14 +165,34 @@
   <img src="images/rit.png" height="75px" />
 </div>
 
-<h3 id="toc_8">Computer science ambassador</h3>
+<h3 id="toc_8">RIT, Computer Science Ambassador</h3>
 
-<p>Rochester Institute of Technology<br>
-<em>March 2014 - January 2015</em></p>
+<p>
+	Rochester Institute of Technology
+	<br />
+	<em>March 2014 - January 2015</em>
+</p>
 
 <ul>
 <li>Served as a representative of the computer science program to potential new students by running informational seminars and tours.</li>
 <li>Interviewed potential professors with RIT faculty when potential professors sought employment.</li>
+</ul>
+
+<div style="float:right">
+  <img src="images/pkp.png"  height="100px" />
+</div>
+
+<h3 id="toc_16"><a href="http://ritphipsi.org">Phi Kappa Psi</a>, Vice President</h3>
+
+<p>
+	Rochester Institute of Technology
+	<br />
+	<em>February 2014 - January 2015</em>
+</p>
+
+<ul>
+<li>Managed the day-to-day operations and long-term goals of over 17 varied committees within a chapter of 60 members.</li>
+<li>Maintained, created, and edited all internal governing documents related to the fraternity.</li>
 </ul>
 
 <hr>
@@ -172,54 +242,6 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <blockquote>
 <p><em>Alice &amp; August, by nic, is something like Dear Esther in its design. We are given a series of rooms to wander between, with each one bringing us a little closer to understanding our relationship to the absent other. Another very interesting choice is the lack of animation: the avatar is a still sprite, sliding through a maze. At times, however, we have to cross a long, featureless hallway and without animation to give us a sense of the passage of time we become anxious. Our anxiety — as to whether time is passing in a meaningful way at all, or whether the game has crashed — mirrors the protagonist’s anxiety after their own life spiraled out of control.</em></p>
 </blockquote>
-
-<hr>
-
-<h2 id="toc_14">Activities</h2>
-
-<div style="float:right">
-  <img src="images/rc.png"  height="100px" />
-</div>
-
-<h3 id="toc_15">Programmer at the <a href="https://www.recurse.com">Recurse Center</a></h3>
-
-<p><em>February 2018 - May 2018</em></p>
-
-<p>From the website:</p>
-<blockquote>
-	<p><em>The Recurse Center runs educational programming retreats in New York City. The retreats are free, self-directed, project based, and for anyone who wants to get dramatically better at programming.</em></p>
-</blockquote>
-
-<ul>
-<li>Focusing on programming a Gameboy emulator, toolchain, and homebrew in C, Go, and Z80 assembly.</li>
-</ul>
-
-<div style="float:right">
-  <img src="images/viking.png"  height="50px" />
-</div>
-
-<h3 id="toc_15">Student at <a href="https://www.vikingcodeschool.com">Viking Code School</a></h3>
-
-<p><em>February 2015 - August 2015</em></p>
-
-<ul>
-<li>Completed an intensive 16 week full-stack development boot camp.</li>
-<li>Focused on Ruby + Rails, included JS, Angular, Sinatra, HTML5/CSS3, Sass, and numerous other DSLs, frameworks, and tools.</li>
-</ul>
-
-<div style="float:right">
-  <img src="images/pkp.png"  height="100px" />
-</div>
-
-<h3 id="toc_16">Vice President of <a href="http://ritphipsi.org">Phi Kappa Psi, New York Theta chapter</a></h3>
-
-<p><em>February 2014 - January 2015</em></p>
-
-<ul>
-<li>Managed the day-to-day operations and long-term goals of over 17 varied committees within a chapter of 60 members.</li>
-<li>Maintained, created, and edited all internal governing documents related to the fraternity.</li>
-</ul>
-
 
 <div id="snow">
 	<i>
