--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <title>Nicolas S. Montanaro</title>
 
 <link rel="stylesheet" type="text/css" href="css/sane.css">
-<link rel="stylesheet" type="text/css" href="css/snow.css">
 
 </head>
 
 <body>
 
-<img style="float: right; border-radius: 50%;" src="images/nobeard_bw_xmas.png" width="75px" height="75px" />
+<img style="float: right; border-radius: 50%;" src="images/nobeard_bw.png" width="75px" height="75px" />
 
 <h1 id="toc_0">Nicolas S. Montanaro</h1>
 
@@ -242,69 +241,6 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <blockquote>
 <p><em>Alice &amp; August, by nic, is something like Dear Esther in its design. We are given a series of rooms to wander between, with each one bringing us a little closer to understanding our relationship to the absent other. Another very interesting choice is the lack of animation: the avatar is a still sprite, sliding through a maze. At times, however, we have to cross a long, featureless hallway and without animation to give us a sense of the passage of time we become anxious. Our anxiety — as to whether time is passing in a meaningful way at all, or whether the game has crashed — mirrors the protagonist’s anxiety after their own life spiraled out of control.</em></p>
 </blockquote>
-
-<div id="snow">
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-		<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-	<i>
-		<b></b>
-	</i>
-</div>
 
 </body>
 
