--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 
 <p>During the summer of 2016 I worked remotely on <a href="https://myspiderweb.com">mySpiderweb</a> with a team of two other developers and the founder. The small team led to a fantastic work experience and I&#39;m proud to have had my hands in all aspects of the application.</p>
 
-<p>I completed a B.S. in Computer Science from the Rochester Institute of Technology in May of 2017.</p>
-
 <p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
 
-<p>I will be attending the <a href="http://homereport.io">Recurse Center</a> from February to May of 2018. I will be focusing on lower-level programming. Specifically, creating an emulator for the Gameboy in Go and homebrew applications in C and Z80 assembly.</p>
+<p>I will be attending the <a href="https://recurse.com">Recurse Center</a> from February to May of 2018. I will be focusing on lower-level programming. Specifically, creating an emulator for the Gameboy in Go and homebrew applications in C and Z80 assembly.</p>
 
 <hr>
 
@@ -57,10 +55,12 @@
   <img src="images/rc.png"  height="100px" />
 </div>
 
-<h3 id="toc_15"><a href="https://www.recurse.com">Recurse Center</a>, Programmer</h3>
+<h3 id="toc_15"><a href="https://www.recurse.com">Recurse Center</a>, Participant</h3>
 
 <p>
 	New York City, NY
+	<br />
+	Full-time
 	<br />
 	<em>February 2018 - May 2018</em>
 </p>
@@ -83,12 +83,15 @@
 <p>
 	Wilton, CT
 	<br />
+	Full-time
+	<br />
 	<em>May 2017 - present</em>
 </p>
 
 <ul>
-<li>HomeReport offers a suite of applications to make buying, selling, and maintaining homes easier.</li>
-<li>Primary developer of all HomeReport applications including OpenHouse, HomeInspection, and Foyer.</li>
+<li>Developed two hybrid mobile applications, one for buying homes and the other for selling, using TypeScript and the Ionic framework.</li>
+<li>Created datasource agnostic backend APIs using Node which allowed for a single point of ingestion for nationwide home information. This makes it simple for any maintainer with knowledge of JavaScript to seamlessly add new data to the existing pipeline.</li>
+<li>Researched, implemented and maintained a collaborative filtering recommender system with Hadoop and Spark. Aggregate information about user preferences is used to provide suggestions for homes with qualities a user is likely to be interested in.</li>
 </ul>
 
 <div style="float:right">
@@ -99,6 +102,8 @@
 
 <p>
 	Rochester, NY (remote)
+	<br />
+	Part-time, summer
 	<br />
 	<em>May 2016 - September 2016</em>
 </p>
@@ -116,6 +121,8 @@
 
 <p>
 	Santa Clara, CA
+	<br />
+	Co-op, degree requirement
 	<br />
 	<em>January 2015 - December 2015</em>
 </p>
@@ -135,6 +142,8 @@
 <p>
 	San Francisco, CA (remote)
 	<br />
+	Part-time
+	<br />
 	<em>February 2015 - August 2015</em>
 </p>
 
@@ -151,6 +160,8 @@
 
 <p>
 	Rochester Institute of Technology
+	<br />
+	Part-time
 	<br />
 	<em>August 2014 - January 2015</em>
 </p>
@@ -169,6 +180,8 @@
 <p>
 	Rochester Institute of Technology
 	<br />
+	Part-time
+	<br />
 	<em>March 2014 - January 2015</em>
 </p>
 
@@ -186,6 +199,8 @@
 <p>
 	Rochester Institute of Technology
 	<br />
+	Extracurricular
+	<br />
 	<em>February 2014 - January 2015</em>
 </p>
 
@@ -198,7 +213,16 @@
 
 <h2 id="toc_9">Projects</h2>
 
-<h3 id="toc_10">Independent study in code clone detection techniques</h3>
+<h3 id="toc_10"><a href="https://github.com/nicoNaN/halken">Halken</a></h3>
+
+<p><strong>Technologies uses</strong>: Go<br>
+
+<ul>
+<li>Halken is a work-in-progress Game Boy emulator written in Go.</li>
+<li>Created as an exercise in low-level programming and to gain a better understanding of computer architecture.</li>
+</ul>
+
+<h3 id="toc_11">Independent study in code clone detection techniques</h3>
 
 <p><strong>Technologies uses</strong>: Java<br>
 View the white paper <a href="/indstudy.pdf">here</a>.</p>
@@ -209,7 +233,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Benchmarked and analyzed tokenization vs. subgraph isomorphism detection techniques for code clone detection.</li>
 </ul>
 
-<h3 id="toc_11"><a href="https://github.com/nicoNaN/kohaku">Kohaku</a></h3>
+<h3 id="toc_12"><a href="https://github.com/nicoNaN/kohaku">Kohaku</a></h3>
 
 <p><strong>Technologies used</strong>: Ruby, Faraday</p>
 
@@ -218,7 +242,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Primarily targeted towards individuals who store a lot of pictures locally, such as imageboard users.</li>
 </ul>
 
-<h3 id="toc_12"><a href="https://github.com/nicoNaN/recipe-book">Recipe Book</a></h3>
+<h3 id="toc_13"><a href="https://github.com/nicoNaN/recipe-book">Recipe Book</a></h3>
 
 <p><strong>Technologies used</strong>: Ruby, Rails, Bootstrap, HTML5, CSS3, SASS, Angular.js</p>
 
@@ -227,7 +251,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Users may take notes on recipes, generate printable PDFs of recipes, follow other users, share recipes with other users, and view user activity in a feed.</li>
 </ul>
 
-<h3 id="toc_13"><a href="http://ludumdare.com/compo/ludum-dare-33/?action=preview&amp;uid=56966">Alice &amp; August: A Love Story</a></h3>
+<h3 id="toc_14"><a href="http://ludumdare.com/compo/ludum-dare-33/?action=preview&amp;uid=56966">Alice &amp; August: A Love Story</a></h3>
 
 <p><strong>Technologies used</strong>: LÖVE framework, Lua, Photoshop</p>
 
