--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
 <p>During the summer of 2016 I worked remotely on <a href="https://myspiderweb.com">mySpiderweb</a> with a team of two other developers and the founder. The small team led to a fantastic work experience and I&#39;m proud to have had my hands in all aspects of the application.</p>
 
-<p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
+<p>I attended the <a href="https://recurse.com">Recurse Center</a> from February to May of 2018 where I created a <a href="https://github.com/nicoNaN/halken">Game Boy emulator</a> in Go.</p>
 
-<p>I will be attending the <a href="https://recurse.com">Recurse Center</a> from February to May of 2018. I will be focusing on lower-level programming. Specifically, creating an emulator for the Gameboy in Go and homebrew applications in C and Z80 assembly.</p>
+<p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
 
 <hr>
 
@@ -79,7 +79,7 @@
 <h3 id="toc_4">HomeReport, Full Stack Developer</h3>
 
 <p>
-	Wilton, CT
+	Trumbull, CT
 	<br />
 	Full-time
 	<br />
