--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </blockquote>
 
 <ul>
-<li>Focusing on programming a Gameboy emulator, toolchain, and homebrew in C, Go, and Z80 assembly.</li>
+<li>Created a Game Boy emulator in Go and gave a <a href="https://nicolas.moe/blog/gbemu-slides/">presentation</a> on the implementation details.</li>
 </ul>
 
 <div style="float:right">
