--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
 
 <body>
 
-<h1 id="toc_0">Nicolas S. Montanaro</h1>
+<img style="float: right; border-radius: 50%;" src="images/leaf-invert.gif" width="75px" />
+
+<h1>Nicolas S. Montanaro</h1>
 
 <div id="subtitle">
-  <p class="alignleft"><em>Software craftsman</em></p>
-  <p class="alignright"><a href="/blog">Blog</a></p>
+	<p class="alignleft"><em>Software craftsman</em></p>
+	<p class="alignright"><a href="/blog">Blog</a></p>
 </div>
 
 <hr>
 
-<h2 id="toc_1">About</h2>
+<h2>About</h2>
 
 <p>Starting off a freshman in college studying finance, I found I much preferred spending my time trying to understand Super Nintendo assembly programming rather than stock numbers.</p>
 
@@ -36,24 +38,43 @@
 
 <hr>
 
-<h2 id="toc_2">Contact information</h2>
+<h2>Contact information</h2>
 
 <ul>
 <li><p><strong>Professional/recruiter inquiries</strong>: hello [at] nicolas.moe</p></li>
 <li><p><strong>Personal</strong>: nsmon [at] rbox.co</p></li>
-<li><p><strong>Keybase</strong>: <a href="https://keybase.io/nsm">keybase.io/nsm</a></p></li>
 <li><p><strong>PGP key</strong>: <a href="/pubkey.txt">pubkey.txt</a></p></li>
 </ul>
 
 <hr>
 
-<h2 id="toc_3">Experience</h2>
+<h2>Experience</h2>
 
 <div style="float:right">
-  <img src="images/rc.png"  height="100px" />
+	<img src="images/foyer.png" height="75px" />
 </div>
 
-<h3 id="toc_15"><a href="https://www.recurse.com">Recurse Center</a>, Participant</h3>
+<h3>Foyer, Information & Technology Director</h3>
+
+<p>
+	Trumbull, CT
+	<br />
+	Full-time
+	<br />
+	<em>May 2017 - present</em>
+</p>
+
+<ul>
+<li>Responsible for overall direction and technical decisions regarding the development of the Foyer: Home Discovery mobile application.</li>
+<li>Created datasource agnostic backend APIs using Node which allowed for a single point of ingestion for nationwide home information. This makes it simple for any maintainer with knowledge of JavaScript to seamlessly add new data to the existing pipeline.</li>
+<li>Researched, implemented and maintained a collaborative filtering recommender system with Hadoop and Spark. Aggregate information about user preferences is used to provide suggestions for homes with qualities a user is likely to be interested in.</li>
+</ul>
+
+<div style="float:right">
+	<img src="images/rc.png" height="100px" />
+</div>
+
+<h3><a href="https://www.recurse.com">Recurse Center</a>, Participant</h3>
 
 <p>
 	New York City, NY
@@ -73,30 +94,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/hr.png" height="75px" />
+	<img src="images/msw.png" height="75px" />
 </div>
 
-<h3 id="toc_4">HomeReport, Full Stack Developer</h3>
-
-<p>
-	Trumbull, CT
-	<br />
-	Full-time
-	<br />
-	<em>May 2017 - present</em>
-</p>
-
-<ul>
-<li>Developed two hybrid mobile applications, one for buying homes and the other for selling, using TypeScript and the Ionic framework.</li>
-<li>Created datasource agnostic backend APIs using Node which allowed for a single point of ingestion for nationwide home information. This makes it simple for any maintainer with knowledge of JavaScript to seamlessly add new data to the existing pipeline.</li>
-<li>Researched, implemented and maintained a collaborative filtering recommender system with Hadoop and Spark. Aggregate information about user preferences is used to provide suggestions for homes with qualities a user is likely to be interested in.</li>
-</ul>
-
-<div style="float:right">
-  <img src="images/msw.png" height="75px" />
-</div>
-
-<h3 id="toc_5">mySpiderweb, Full Stack Developer</h3>
+<h3>mySpiderweb, Full Stack Developer</h3>
 
 <p>
 	Rochester, NY (remote)
@@ -112,10 +113,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/intel.png" height="75px" />
+	<img src="images/intel.png" height="75px" />
 </div>
 
-<h3 id="toc_6">Intel, Software Application Engineer</h3>
+<h3>Intel, Software Application Engineer</h3>
 
 <p>
 	Santa Clara, CA
@@ -132,10 +133,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/viking.png"  height="50px" />
+	<img src="images/viking.png"  height="50px" />
 </div>
 
-<h3 id="toc_15"><a href="https://www.vikingcodeschool.com">Viking Code School</a>, Student</h3>
+<h3><a href="https://www.vikingcodeschool.com">Viking Code School</a>, Student</h3>
 
 <p>
 	San Francisco, CA (remote)
@@ -151,10 +152,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/rit.png" height="75px" />
+	<img src="images/rit.png" height="75px" />
 </div>
 
-<h3 id="toc_7">RIT, Computer Science Student Lab Instructor</h3>
+<h3>RIT, Computer Science Student Lab Instructor</h3>
 
 <p>
 	Rochester Institute of Technology
@@ -170,10 +171,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/rit.png" height="75px" />
+	<img src="images/rit.png" height="75px" />
 </div>
 
-<h3 id="toc_8">RIT, Computer Science Ambassador</h3>
+<h3>RIT, Computer Science Ambassador</h3>
 
 <p>
 	Rochester Institute of Technology
@@ -189,10 +190,10 @@
 </ul>
 
 <div style="float:right">
-  <img src="images/pkp.png"  height="100px" />
+	<img src="images/pkp.png"  height="100px" />
 </div>
 
-<h3 id="toc_16"><a href="http://ritphipsi.org">Phi Kappa Psi</a>, Vice President</h3>
+<h3><a href="http://ritphipsi.org">Phi Kappa Psi</a>, Vice President</h3>
 
 <p>
 	Rochester Institute of Technology
@@ -209,18 +210,18 @@
 
 <hr>
 
-<h2 id="toc_9">Projects</h2>
+<h2>Projects</h2>
 
-<h3 id="toc_10"><a href="https://github.com/nicoNaN/halken">Halken</a></h3>
+<h3><a href="https://github.com/nicoNaN/halken">Halken</a></h3>
 
 <p><strong>Technologies uses</strong>: Go<br>
 
 <ul>
-<li>Halken is a work-in-progress Game Boy emulator written in Go.</li>
-<li>Created as an exercise in low-level programming and to gain a better understanding of computer architecture.</li>
+<li>Halken is a Game Boy emulator written in Go.</li>
+<li>Created as an exercise in low-level programming and to gain a better understanding of computer architecture while at the Recurse Center.</li>
 </ul>
 
-<h3 id="toc_11">Independent study in code clone detection techniques</h3>
+<h3>Independent study in code clone detection techniques</h3>
 
 <p><strong>Technologies uses</strong>: Java<br>
 View the white paper <a href="/indstudy.pdf">here</a>.</p>
@@ -231,7 +232,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Benchmarked and analyzed tokenization vs. subgraph isomorphism detection techniques for code clone detection.</li>
 </ul>
 
-<h3 id="toc_12"><a href="https://github.com/nicoNaN/kohaku">Kohaku</a></h3>
+<h3><a href="https://github.com/nicoNaN/kohaku">Kohaku</a></h3>
 
 <p><strong>Technologies used</strong>: Ruby, Faraday</p>
 
@@ -240,7 +241,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Primarily targeted towards individuals who store a lot of pictures locally, such as imageboard users.</li>
 </ul>
 
-<h3 id="toc_13"><a href="https://github.com/nicoNaN/recipe-book">Recipe Book</a></h3>
+<h3><a href="https://github.com/nicoNaN/recipe-book">Recipe Book</a></h3>
 
 <p><strong>Technologies used</strong>: Ruby, Rails, Bootstrap, HTML5, CSS3, SASS, Angular.js</p>
 
@@ -249,7 +250,7 @@ View the white paper <a href="/indstudy.pdf">here</a>.</p>
 <li>Users may take notes on recipes, generate printable PDFs of recipes, follow other users, share recipes with other users, and view user activity in a feed.</li>
 </ul>
 
-<h3 id="toc_14"><a href="http://ludumdare.com/compo/ludum-dare-33/?action=preview&amp;uid=56966">Alice &amp; August: A Love Story</a></h3>
+<h3><a href="http://ludumdare.com/compo/ludum-dare-33/?action=preview&amp;uid=56966">Alice &amp; August: A Love Story</a></h3>
 
 <p><strong>Technologies used</strong>: LÖVE framework, Lua, Photoshop</p>
 
