--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>Nicolas S. Montanaro</h1>
 
 <div id="subtitle">
-	<p class="alignleft"><em>Software craftsman</em></p>
+	<p class="alignleft"><em>Computer programmer</em></p>
 	<p class="alignright"><a href="/blog">Blog</a></p>
 </div>
 
@@ -26,7 +26,7 @@
 
 <h2>About</h2>
 
-<p>Starting off a freshman in college studying finance, I found I much preferred spending my time trying to understand Super Nintendo assembly programming rather than stock numbers.</p>
+<p>When I was a freshman in college studying finance I found I much preferred spending my time trying to understand Super Nintendo assembly programming rather than stock numbers.</p>
 
 <p>After a year and a half of formal instruction in computer science I began working at Intel in California. While there I attended Viking Code School to further develop my programming abilities, and completed a couple of side projects.</p>
 
@@ -34,7 +34,7 @@
 
 <p>I attended the <a href="https://recurse.com">Recurse Center</a> from February to May of 2018 where I created a <a href="https://github.com/nicoNaN/halken">Game Boy emulator</a> in Go.</p>
 
-<p>I currently work at <a href="http://homereport.io">HomeReport</a> as a full stack developer for a suite of cross-platform applications.</p>
+<p>I currently work at <a href="http://foyerapp.io">Foyer</a> as a programmer and technical director for a suite of cross-platform applications.</p>
 
 <hr>
 
