--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-<img style="float: right; border-radius: 50%;" src="images/leaf-invert.gif" width="75px" />
+<img style="float: right; border-radius: 50%;" src="images/9ball.gif" width="75px" />
 
 <h1>Nicolas S. Montanaro</h1>
 
