--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<ul>
 		<li>
-			<p><strong>Professional/recruiter inquiries</strong>: hello [at] nicolas.moe</p>
+			<p><strong>Professional/recruiter inquiries</strong>: mail [at] nicolasmontanaro.com</p>
 		</li>
 		<li>
 			<p><strong>Personal</strong>: nsmon [at] rbox.co</p>
@@ -114,7 +114,8 @@
 
 	<ul>
 		<li>Created a Game Boy emulator in Go and gave a <a
-				href="https://nicolas.moe/blog/gbemu-slides/">presentation</a> on the implementation details.</li>
+				href="https://nicolasmontanaro.com/blog/gbemu-slides/">presentation</a> on the implementation details.
+		</li>
 	</ul>
 
 	<div style="float:right">
