xmas and resume

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Nicolas S. Montanaro</title>
 
 	<link rel="stylesheet" type="text/css" href="css/sane.css">
-
+	<link rel="stylesheet" type="text/css" href="css/snow.css">
 </head>
 
 <body>
@@ -309,6 +309,69 @@
 					whether time is passing in a meaningful way at all, or whether the game has crashed — mirrors the
 					protagonist’s anxiety after their own life spiraled out of control.</em></p>
 		</blockquote>
+
+		<div id="snow">
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+			<i>
+				<b></b>
+			</i>
+		</div>
 
 </body>
 
