add mister guide

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ and a whole lot of closed-source for the paychecks... ;)
  ▐█▌·▪▐█·█▌ ▐█▌·
  ▀▀▀ •▀▀ ▀▀ ▀▀▀ 
 
+04-24-2021 - <a href="https://nicolasmontanaro.com/blog/pc98-mister">PC98 MiSTER FPGA Notes</a>
 05-14-2018 - Game Boy emulation talk @ Recurse Center | <a href="https://nicolasmontanaro.com/blog/gbemu-slides/pdf/gbemu.pdf">pdf</a> | <a href="https://nicolasmontanaro.com/blog/gbemu-slides/html/index.html">html (videos inc.)</a>
 12-29-2017 - <a href="https://nicolasmontanaro.com/blog/freebsd-desktop/">FreeBSD + Common Desktop Environment (CDE) installation notes</a>
 09-07-2017 - <a href="https://nicolasmontanaro.com/blog/9front-guide/">9front guide</a>
