--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="css/txt.css">
 </head>
 
-<body>
+<body class="crt">
   <div class="container">
     <div class="content">
       <pre>
